--- a/style.css
+++ b/style.css
@@ -48,9 +48,13 @@ table {
 }
 /*real deal*/
 body{
-    background-color: #FCCD04;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-image: url("blurred-background-1.jpg");
 }
-
+.big_title{
+    top: 20%;
+    text-align: center;
+}
 .login_box{
     border-radius: 25px;
     position: fixed;
@@ -60,7 +64,7 @@ body{
     left: 50%;
     margin-top: -100px;
     margin-left: -100px;
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
     background-color: white;
 }
