--- a/style.css
+++ b/style.css
@@ -54,17 +54,25 @@ body{
 .big_title{
     top: 20%;
     text-align: center;
+    font-size: 50px;
+    margin-top: 90px;
+    color: white;
 }
 .login_box{
+    display: block;
     border-radius: 25px;
-    position: fixed;
     text-align: center;
     line-height: 50px;
     top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -100px;
+    margin:auto;
+    margin-top: 100px;
     width: 350px;
     height: 250px;
     background-color: white;
+}
+.title{
+    
+}
+.exception{
+    font-size: 12px;
 }
