mulai landing page

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ table {
 /*real deal*/
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url("blurred-background-1.jpg");
+    background-image: url("Blur-2.png");
 }
 .big_title{
     top: 20%;
