--- a/style_landing_page.css
+++ b/style_landing_page.css
@@ -46,3 +46,18 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+/*-------This is the big deal--------------*/
+
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: white;
+}
+
+.navbar{
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    background-color:#8D8741;
+}
