--- a/style_landing_page.css
+++ b/style_landing_page.css
@@ -59,5 +59,16 @@ body{
     position: fixed;
     width: 100%;
     height: 80px;
+    float: right;
+    line-height: 80px;
     background-color:#8D8741;
+}
+
+.nav-link{
+    float: right;
+    margin-right: 20px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    text-decoration: none;
 }
