--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ body{
     color: white;
 }
 .login_box{
+    padding-right: 20px;
+    padding-left: 30px;
     display: block;
     border-radius: 25px;
     text-align: center;
@@ -76,4 +78,12 @@ body{
 }
 .exception{
     font-size: 12px;
+}
+
+.left-tab{
+    float: left;
+}
+.right-tab{
+    width: 70%;
+    float: right;
 }
