--- a/style_landing_page.css
+++ b/style_landing_page.css
@@ -55,13 +55,22 @@ body{
     background-color: white;
 }
 
-.navbar{
+.header{
     position: fixed;
     width: 100%;
     height: 80px;
     float: right;
     line-height: 80px;
     background-color:#8D8741;
+    z-index: 999;
+}
+
+#header-img{
+    margin-left: 10px;
+    margin-top: 4px;
+    height: 70px;
+    width: 70px;
+    float: left;
 }
 
 .nav-link{
@@ -71,4 +80,24 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     text-decoration: none;
+    cursor: pointer;
+}
+
+#main-doc{
+    display: block;
+    margin: auto;
+    max-width: 800px;
+    padding: 30px;
+    padding-top: 120px;
+    line-height: 20px;
+}
+
+header{
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.text{
+    text-indent: 30px;
+    text-align: justify;
 }
