--- a/style_landing_page.css
+++ b/style_landing_page.css
@@ -61,7 +61,7 @@ body{
     height: 80px;
     float: right;
     line-height: 80px;
-    background-color:#8D8741;
+    background-color:#33691e;
     z-index: 999;
 }
 
