--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
 .big_title{
     top: 20%;
     text-align: center;
+    font-weight: 600;
     font-size: 50px;
     margin-top: 60px;
     color: #33691e  ;
