--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ body{
     /* background-image: url("Blur-2.png"); */
 }
 .big_title{
+    font-family: 'Times New Roman', Times, serif;
     top: 20%;
     text-align: center;
     font-weight: 600;
-    font-size: 50px;
+    font-size: 65px;
     margin-top: 60px;
     color: #33691e  ;
 }
