--- a/style_landing_page.css
+++ b/style_landing_page.css
@@ -47,7 +47,6 @@ table {
 	border-spacing: 0;
 }
 
-
 /*-------This is the big deal--------------*/
 
 body{
@@ -151,3 +150,57 @@ h2{
     float : left;
     text-decoration:none;
 }
+
+.comment{
+    margin-top: 10px;
+    height: 400px;
+    width: 100%;
+    background-color: rgb(202, 206, 205);
+    position: relative;
+    margin-bottom: 15px;
+    border: 1px solid gainsboro;
+}
+
+.add_button{
+    height: 20px;
+    width: 40px;
+    border: 0;
+    margin: 10px;
+    background-color: rgb(51, 161, 51);
+    cursor: pointer;
+}
+
+.comment_section{
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.the_comment{
+    width: 100%;
+    border-bottom: 1px solid rgb(202, 206, 205);
+    background-color: white;
+}
+
+#comment_box{
+    height:100px;
+    width: 225px;
+}
+
+.comment_button{
+    float: right;
+    height: 25px;
+    border: 0;
+}
+
+.comment_button:hover{
+    background-color: chocolate;
+    cursor: pointer;
+}
+
+.button_section{
+    height: 30px;
+    /* width: 100%; */
+    clear: both;
+}
+
